# hf-hal

./: .gitignore  .gitmodules  CMakeLists.txt  DOCUMENTATION_CORRECTIONS.md  DOCUMENTATION_INDEX.md  MOTOR_CONTROLLER_CORRECTIONS.md  MUTEX_OPTIMIZATION_SUMMARY.md  README.md  idf_component.yml
API/: All.h  CMakeLists.txt  HardFocIntegration.cpp  HardFocIntegration.h  README.md  SystemInit.cpp  SystemInit.h
component-handers/: CMakeLists.txt  CommChannelsManager.cpp  CommChannelsManager.h  GpioManager.cpp  GpioManager.h  ImuManager.cpp  ImuManager.h  MotorController.cpp  MotorController.h
component-handler/: AdcData.cpp  AdcData.h  AdcHandler.h  AdcManager.h  AdcMultiCountReading.h  All.h  CMakeLists.txt  CommonIDs.h  GpioData.cpp  GpioData.h  GpioHandler.cpp  GpioHandler.h  GpioManager.cpp  GpioManager.h  HardFocIntegration.h  INTEGRATION_GUIDE.md  MultiReadings.h  Pcal95555DigitalGpio.cpp  Pcal95555DigitalGpio.h  Pcal95555Gpio.cpp  Pcal95555Gpio.h  Pcal95555GpioWrapper.cpp  Pcal95555GpioWrapper.h  Pcal95555Handler.cpp  Pcal95555Handler.h  README.md  Result.h  SystemInit.cpp  SystemInit.h  TMC9660Controller.cpp  TMC9660Controller.h  TMC9660_README.md  ThingsToString.h  Tmc9660Example.cpp  Tmc9660Gpio.cpp  Tmc9660Gpio.h  Tmc9660MotorController.cpp  Tmc9660MotorController.h
component-handler/API/: AdcData.cpp  AdcData.h  All.h  GpioData.h  HardFocIntegration.cpp  HardFocIntegration.h  SystemInit.cpp  SystemInit.h
component-handler/test/: GpioSystemIntegrationTest.cpp  GpioSystemIntegrationTest.h
component-handlers/: AdcData.h  AdcManager.cpp  AdcManager.h  BldcCanOpenController.cpp  BldcCanOpenController.h  Bno08xImuDriver.cpp  Bno08xImuDriver.h  CMakeLists.txt  CommChannelsManager.cpp  CommChannelsManager.h  ConsolePort.cpp  EncoderController.cpp  EncoderController.h  EncoderManager.cpp  EncoderManager.h  FansHandler.cpp  FansHandler.h  GpioManager.cpp  GpioManager.h  GpioManagerClean.h  GpioManagerLean.h  ImuManager.cpp  ImuManager.h  LedManager.cpp  LedManager.h  Logger.cpp  Logger.h  MotorController.h  Pcal95555Handler.h  Result.h  TemperatureManager.cpp  TemperatureManager.h  TemperatureSensor.cpp  TemperatureSensor.h  Tmc9660Example.cpp  Tmc9660Handler.cpp
component-handlers/Base/: BaseImuDriver.h
component-managers/: AdcManager.cpp  CMakeLists.txt  CommChannelsManager.cpp  GpioManager.cpp  ImuManager.cpp  MotorController.cpp  MotorController.h
components-api/: AdcData.cpp  ConsolePort.h
docs/: ADC_MANAGER_README.md  ADC_MANAGER_TMC9660_INTEGRATION_SUMMARY.md  ADC_SYSTEM_FIX_STATUS.md  AS5047U_HANDLER_ARCHITECTURE.md  AUTOMATIC_MOTORCONTROLLER_INITIALIZATION.md  BNO08X_CALLBACK_MECHANISM.md  BNO08X_HANDLER_ARCHITECTURE.md  BOARD_AWARE_TMC9660_ARCHITECTURE.md  COMMCHANNELSMANAGER_ARCHITECTURE.md  COMPONENT_HANDLER_INTEGRATION_GUIDE.md  ENHANCED_MOTORCONTROLLER_IMPLEMENTATION_SUMMARY.md  ENUMERATED_SPI_DEVICE_ACCESS.md  FINAL_IMPLEMENTATION_REPORT.md  GPIO_ARCHITECTURE_FINAL.md  GPIO_MANAGER_README.md  GPIO_MANAGER_REFACTOR_SUMMARY.md  HARDFOC_GPIO_ADC_SYSTEM.md  HARDFOC_HARDWARE_ABSTRACTION_ARCHITECTURE.md  I2C_BUS_DEVICE_ARCHITECTURE.md  I2C_CLEANUP_SUMMARY.md  I2C_IMPLEMENTATION_COMPLETION_SUMMARY.md  I2C_IMPLEMENTATION_DOCUMENTATION.md  I2C_OLD_FILES_REMOVAL_SUMMARY.md  IMU_MANAGER_INTERRUPT_IMPLEMENTATION.md  INTERNAL_INTERFACE_WRAPPER_DEEP_DIVE_ANALYSIS.md  MULTI_DEVICE_TMC9660_ARCHITECTURE.md  PCAL95555_LAZY_INITIALIZATION_ARCHITECTURE.md  PCAL95555_PIN_OWNED_INTERRUPT_ARCHITECTURE.md  PCAL95555_PIN_REGISTRY_ARCHITECTURE.md  PCAL95555_WRAPPER_README.md  PWM_ARCHITECTURE.md  SPI_NO_EXCEPTIONS_SUMMARY.md  TIME_MANAGEMENT_UPDATE.md  TMC9660_HANDLER_ARCHITECTURE_UPDATE.md  TMC9660_UART_IMPLEMENTATION.md  UNIFIED_GPIO_INTERRUPT_ARCHITECTURE.md
docs/component-handlers/: ADC_MANAGER_README.md  BASE_CLASS_ENUMS_DOCUMENTATION_REPORT.md  COMM_CHANNELS_MANAGER_README.md  ENCODER_CONTROLLER_README.md  ENCODER_MANAGER_README.md  GPIO_MANAGER_README.md  HARDWARE_FILTERING_IMPLEMENTATION_REPORT.md  IMU_MANAGER_README.md  LED_MANAGER_README.md  MOTOR_CONTROLLER_README.md  TEMPERATURE_MANAGER_README.md
docs/development/: ARCHITECTURE_GUIDELINES.md  BASEINTERFACE_REFERENCE.md  CODING_STANDARDS.md  COMPONENT_MANIFEST_GUIDE.md  DOCUMENTATION_STANDARDS.md  MUTEX_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  TESTING_REQUIREMENTS.md
docs/driver-handlers/: AS5047U_HANDLER_README.md  BNO08X_HANDLER_README.md  LOGGER_HANDLER_README.md  NTC_TEMPERATURE_HANDLER_README.md  PCAL95555_HANDLER_README.md  TMC9660_HANDLER_README.md  TMC9660_TEMPERATURE_README.md  WS2812_RMT_HANDLER_README.md
docs/examples/: Pcal95555Example.cpp  advanced_comm_example.cpp  comm_bus_example.cpp
examples/: AdcManagerExample.cpp  AdvancedGpioManagerExample.cpp  As5047uHandlerExample.cpp  Bno08xHandlerExample.cpp  Bno08xHandlerImuExample.cpp  BoardAwareTmc9660Example.cpp  ComprehensiveTemperatureExample.cpp  DumpAllStatisticsExample.cpp  EncoderControllerExample.cpp  EncoderManagerExample.cpp  EnhancedAdcCanExample.cpp  EnumeratedSpiDeviceExample.cpp  GpioManagerCleanExample.cpp  GpioManagerExample.cpp  GpioManagerImprovedExample.cpp  I2cBno08xCallbackExample.cpp  I2cBno08xExample.cpp  I2cBusDeviceExample.cpp  ImuInterruptTaskExample.cpp  ImuManagerExample.cpp  ImuManagerInterruptExample.cpp  LedManagerExample.cpp  LoggerExample.cpp  ModernHalExample.cpp  MultiTmc9660Example.cpp  SimpleBoardAwareTmc9660Example.cpp  SpiUsageExample.cpp  TemperatureManagerExample.cpp  Tmc9660Example.cpp  Tmc9660HandlerUsageExample.cpp  Tmc9660UartExample.cpp  UnifiedGpioInterruptExample.cpp  VortexApiExample.cpp
tests/: CMakeLists.txt  README.md
tests/component-handler/: GpioSystemIntegrationTest.cpp  I2cBusDeviceTest.cpp
tests/external-drivers/: test_as5047u.cpp
tests/interface-wrapper/: CMakeLists.txt  CommBusTests.cpp  CommBusTests.h  README.md  TestManager.h  test_runner.cpp
utils-and-drivers/driver-handlers/: As5047uHandler.cpp  As5047uHandler.h  Bno08xHandler.cpp  Bno08xHandler.h  Logger.cpp  NtcTemperatureHandler.cpp  Pcal95555Handler.cpp  Pcal95555Handler.h  Tmc9660Handler.cpp  (+1 more)
(+1 files in other folders)
